--- a/docs/views/fe/study-day-20/4月学习打卡.md
+++ b/docs/views/fe/study-day-20/4月学习打卡.md
@@ -15,9 +15,10 @@ categories:
 :::
 
 
-## 三月
+## 四月
 
 ### 疫情中
 
 1. 新的项目开始启动，做了好几个动员大会，公司也分开成两个项目大组，我被分到了新项目
 2. 虽然早有预感，项目的开发会很紧张，996生活开始
+3. 国内疫情回复中，国外倒是人数不断增长，特别是头号强国，不知道这个对今年老特的连任是否有影响，一定要撑住啊！美国人民需要你继续带领
